exports[`ArraySchema multiple schema normalizes multiple entities 1`] = `
Object {
  "entities": Object {
    "cats": Object {
      "123": Object {
        "id": "123",
        "type": "cats",
      },
      "456": Object {
        "id": "456",
        "type": "cats",
      },
    },
    "users": Object {
      "123": Object {
        "id": "123",
        "type": "users",
      },
    },
  },
  "result": Array [
    "123",
    "123",
    "456",
    Object {
      "id": "789",
    },
  ],
}
`;

exports[`ArraySchema multiple schema normalizes multiple entities 2`] = `
Array [
  Array [
    Object {
      "id": "123",
      "type": "cats",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "users",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
      Object {
        "id": "789",
      },
    ],
    0,
  ],
  Array [
    Object {
      "id": "123",
      "type": "users",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "users",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
      Object {
        "id": "789",
      },
    ],
    1,
  ],
  Array [
    Object {
      "id": "456",
      "type": "cats",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "users",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
      Object {
        "id": "789",
      },
    ],
    2,
  ],
  Array [
    Object {
      "id": "789",
    },
    Array [
      Object {
        "id": "123",
        "type": "cats",
      },
      Object {
        "id": "123",
        "type": "users",
      },
      Object {
        "id": "456",
        "type": "cats",
      },
      Object {
        "id": "789",
      },
    ],
    3,
  ],
]
`;

exports[`ArraySchema simple Arrays passes its parent to its children when normalizing 1`] = `
Object {
  "entities": Object {
    "children": Object {
      "4": Object {
        "content": "child",
        "id": 4,
        "parentId": 1,
        "parentKey": "children",
      },
    },
    "parents": Object {
      "1": Object {
        "children": Array [
          4,
        ],
        "content": "parent",
        "id": 1,
      },
    },
  },
  "result": 1,
}
`;
